[package]
name = "superstream"
version = "0.2.0"
edition = "2021"
description = "Streaming payments on Solana"
repository="https://github.com/superstream-finance/superstream"
homepage = "https://superstream.finance/"
documentation = "https://docs.rs/superstream"
readme = "README.md"
license="MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "superstream"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
